Correção de deprecated