@@ -111,7 +111,7 @@ public class VLocation extends org.compiere.grid.ed.VLocation
 			int C_Location_ID = 0;
 			if (m_value != null)
 				C_Location_ID = m_value.getC_Location_ID();
-			Integer ii = new Integer(C_Location_ID);
+			Integer ii = Integer.valueOf(C_Location_ID);
 			
 			if (C_Location_ID != 0)
 				fireVetoableChange(m_columnName, oldValue, ii);
